# oszi-remote

./: .gitignore  README.md  flake.nix  oszi_remote_entry.py  pyproject.toml  scope_noise_hist.py
.github/workflows/: build-windows.yml
legacy/: scope_noise_hist.py
src/scope_noise_hist/: cli.py  gds_reader.py  io.py  stats.py  types.py  viewer.py
tools/windows/: Start_oszi-remote.bat  build.bat
